--- a/pom.xml
+++ b/pom.xml
@@ -49,14 +49,7 @@
         <dependency>
             <groupId>gr.iti.mklab</groupId>
             <artifactId>mklab-framework-common</artifactId>
-            <version>0.1</version>
-        </dependency>
-        
-        
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-core</artifactId>
-            <version>1.1.0</version>
+            <version>0.2-SNAPSHOT</version>
         </dependency>
         
         <dependency>
@@ -74,6 +67,16 @@
         	<artifactId>mongo-java-driver</artifactId>
         	<version>2.12.4</version>
         </dependency>
+        <dependency>
+        	<groupId>org.apache.commons</groupId>
+        	<artifactId>commons-lang3</artifactId>
+        	<version>3.3.2</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.glassfish.jersey.core</groupId>
+        	<artifactId>jersey-client</artifactId>
+        	<version>2.16</version>
+		</dependency>
     </dependencies>
            
     <build>
