--- a/pom.xml
+++ b/pom.xml
@@ -62,11 +62,11 @@
         	<artifactId>solr-solrj</artifactId>
         	<version>4.10.2</version>
         </dependency>
-        <dependency>
+    	<dependency>
         	<groupId>org.mongodb</groupId>
-        	<artifactId>mongo-java-driver</artifactId>
-        	<version>2.12.4</version>
-        </dependency>
+        	<artifactId>mongodb-driver</artifactId>
+        	<version>3.0.4</version>
+    	</dependency>
         <dependency>
         	<groupId>org.apache.commons</groupId>
         	<artifactId>commons-lang3</artifactId>
@@ -77,6 +77,11 @@
         	<artifactId>jersey-client</artifactId>
         	<version>2.16</version>
 		</dependency>
+        <dependency>
+        	<groupId>commons-logging</groupId>
+        	<artifactId>commons-logging</artifactId>
+        	<version>1.2</version>
+        </dependency>
     </dependencies>
            
     <build>
