--- a/pom.xml
+++ b/pom.xml
@@ -53,14 +53,9 @@
         </dependency>
         
         <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>2.4.2</version>
-        </dependency>
-        <dependency>
         	<groupId>org.apache.solr</groupId>
         	<artifactId>solr-solrj</artifactId>
-        	<version>4.10.2</version>
+        	<version>5.1.0</version>
         </dependency>
     	<dependency>
         	<groupId>org.mongodb</groupId>
@@ -78,9 +73,9 @@
         	<version>2.16</version>
 		</dependency>
         <dependency>
-        	<groupId>commons-logging</groupId>
-        	<artifactId>commons-logging</artifactId>
-        	<version>1.2</version>
+        	<groupId>org.apache.logging.log4j</groupId>
+        	<artifactId>log4j-core</artifactId>
+        	<version>2.1</version>
         </dependency>
     </dependencies>
            
