--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
         	<artifactId>log4j-core</artifactId>
         	<version>2.1</version>
         </dependency>
+        <dependency>
+        	<groupId>commons-logging</groupId>
+        	<artifactId>commons-logging</artifactId>
+        	<version>1.2</version>
+        </dependency>
     </dependencies>
            
     <build>
