--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>gr.iti.mklab</groupId>
     <artifactId>mklab-framework-client</artifactId>
-    <version>0.2</version>
+    <version>0.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>mklab-framework-client</name>
@@ -19,7 +19,7 @@
         <connection>scm:git:git@github.com:MKLab-ITI/mklab-framework-client.git</connection>
         <developerConnection>scm:git:git@github.com:MKLab-ITI/mklab-framework-client.git</developerConnection>
         <url>git@github.com:MKLab-ITI/mklab-framework-client.git</url>
-  	  <tag>mklab-framework-client-0.2</tag>
+  	  <tag>HEAD</tag>
   </scm>
     
     <developers>
