--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,13 @@
         <developerConnection>scm:git:git@github.com:MKLab-ITI/mklab-framework-client.git</developerConnection>
         <url>git@github.com:MKLab-ITI/mklab-framework-client.git</url>
   	  <tag>HEAD</tag>
-  </scm>
+  	</scm>
     
     <developers>
         <developer>
             <id>manosetro</id>
             <name>Manos Schinas</name>
-            <email>manosetro</email>
+            <email>manosetro@iti.gr</email>
         </developer>
     </developers>
     
@@ -37,12 +37,6 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-  
-    <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>7</version>
-    </parent>
     
     <dependencies>
         <!-- MKLab Dependencies -->
@@ -84,6 +78,13 @@
         </dependency>
     </dependencies>
            
+   	<distributionManagement>
+  		<snapshotRepository>
+    		<id>ossrh</id>
+    		<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+  		</snapshotRepository>
+	</distributionManagement>
+	
     <build>
       	<pluginManagement>
         	<plugins>
@@ -109,18 +110,9 @@
 				<configuration>
 					<serverId>sonatype-nexus-staging</serverId>
 					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+					<autoReleaseAfterClose>false</autoReleaseAfterClose>
 				</configuration>
 			</plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -174,6 +166,17 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!--
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+            -->
         </plugins>
         <resources>
             <resource>
