--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
         <plugins>
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<artifactId>ossrh</artifactId>
 				<version>1.6.3</version>
 				<extensions>true</extensions>
 				<configuration>
