--- a/pom.xml
+++ b/pom.xml
@@ -104,11 +104,11 @@
         <plugins>
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>ossrh</artifactId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
 				<version>1.6.3</version>
 				<extensions>true</extensions>
 				<configuration>
-					<serverId>sonatype-nexus-staging</serverId>
+					<serverId>ossrh</serverId>
 					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
 					<autoReleaseAfterClose>false</autoReleaseAfterClose>
 				</configuration>
